--- a/lab2.html
+++ b/lab2.html
@@ -7,10 +7,10 @@
   <h2>Caroline's Friend Page</h2>
   <form action="lab2p2.html">
       <div>
-          <label for="fname">First name:</label>
-          <input type="text" id="fname" name="fname" required><br><br>
-          <label for="lname">Last name:</label>
-          <input type="text" id="lname" name="lname"><br><br>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required><br><br>
+          <label for="major">Major:</label>
+          <input type="text" id="major" name="major"><br><br>
           <button class="btn" type="submit" value="Submit">Submit</button>
       </div>
     </form>
